Fix z-index for panel in fullscreen.

--- a/scss/fullscreen.scss
+++ b/scss/fullscreen.scss
@@ -13,6 +13,10 @@
     max-height: 100%;
   }
 
+  .panelm {
+    z-index:1200;
+  }
+
   .faces {
     position: absolute;
     z-index: 1100;
