--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,11 @@ body {
   margin: 60px 0 0 0;
   background: white;
 }
+
+h3 {
+  padding-left: 5px;
+}
+
 .panel > .title > input {
   position: absolute;
   top: 6px;
