--- a/scss/panel.scss
+++ b/scss/panel.scss
@@ -9,7 +9,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     transition: 0.3s;
-    z-index: 1200;
+    z-index: 900;
     width: 0;
     max-width: 90%;
 
